--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
 
 <!-- <h1> Welcome {{name.title()}}, here are some date ideas</h1> -->
 
-<div class = "wrapper2" >
+<div class = "wrapper" >
     
  <div>
     <h1> Welcome {{name.title()}}, here are some date ideas</h1>
