--- a/templates/picnic.html
+++ b/templates/picnic.html
@@ -12,7 +12,7 @@
            
            <p>{{places[place]["name"]}}</p>
            <p>{{places[place]["city"]}}, {{places[place]["state"]}}</p>
-           <!-- <p>{{places[place]["state"]}}</p> -->
+           <p>{{places[place]["state"]}}</p>
            <!-- <img src='{{places[place]["img"]}}'alt='{{places[place]["name"]}}''> -->
            <p>{{places[place]["rvw count"]}}</p>
            <p>{{places[place]["rating"]}}</p>
