--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,12 +1,36 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>{% block title %}TITLE HERE{% endblock %}</title>
+    <link rel="stylesheet" href="/static/css/css.css">
+    <nav class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About</a>
+        
+        
+    </nav>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class=flashes>
+        
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
 
-{% block title %}Welcome{% endblock %}
 
-{% block content %}
+</head>
 
+<body>
 <!-- <h1> Welcome {{name.title()}}, here are some date ideas</h1> -->
 
-<div class = "wrapper" >
+<div class = "wrapper2" >
     
  <div>
     <h1> Welcome {{name.title()}}, here are some date ideas</h1>
@@ -83,18 +107,7 @@
 
 </div>
 
-
-
-
-
-
-
-
-
 </div>
 
-
-
-
-{% endblock %}
+</body>
 
