--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -1,29 +1,59 @@
 {% extends 'base.html' %}
 
+
+
+
 {% block title %}Welcome{% endblock %}
 
 {% block content %}
+<div class = "box">
 <div class = "wrapper" >
-<div>
-       <h1> here are some restaurants in {{location}}</h1>
-       {% for place in session["list"]%}
-       <p>{{places[place]["name"]}}</p>
-       <img src='{{places[place]["img"]}}'alt='{{places[place]["name"]}}'>
-       <!-- <p>{{places[place]["name"]}}</p> -->
-       <p>{{places[place]["city"]}}, {{places[place]["state"]}} </p>
-       {% for num in range(places[place]["rating"]|int)%}
-       <span class="fa fa-star checked"></span>
-       {% endfor%}
-       {% for i in  range(5 - places[place]["rating"]|int) %}
-       <span class="fa fa-star"></span> (<small>{{places[place]["rvw count"]}}</small>)
-       {% endfor %}
+   <div>
+    <h1> here are some restaurants in {{location}}</h1>
+    {% for place in places%}
+        <p>{{places[place]["name"]}}</p>
+    <div class="photos">
+        {% for photo in places[place]["img"]%}
+            <img src="{{photo}}" alt="{{photo}}"> 
+        {% endfor%}
+    </div>
+    <!-- <p>{{places[place]["name"]}}</p> -->
+    <p>{{places[place]["city"]}}, {{places[place]["state"]}} </p>
+    {% for num in range(places[place]["rating"]|int)%}
+        <span class="fa fa-star checked"></span>
+    {% endfor%}
+    {% for i in  range(5 - places[place]["rating"]|int) %}
+        <span class="fa fa-star"></span> (<small>{{places[place]["rvw count"]}}</small>)
+    {% endfor %}
 
-       <p>{{places[place]["phone"]}}</p>
-       <p>{{places[place]["closed"]}}</p>
-       
-            
-       {%endfor%}
+    <p>{{places[place]["phone"]}}</p>
+    <p>{{places[place]["closed"]}}</p>
     
+        
+    {%endfor%}
+</div>
+</div>
+
+<div>
+    
+</div>
+
+<!-- <div id = 'map_side'>
+    <section class = 'map'>
+        <div id='map'></div>
+    </section>
+    
+    <div id="sidebar"></div>
+    <div id = 'dir'></div>
+</div>
+
+
+<script src="/static/js/maps.js"></script>
+<script
+     async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6RD6DyM1gAfngaDFhVxdTSHovyuacjZA&callback=initMap">
+</script> -->
+
 </div>
 
     
