--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}TITLE HERE{% endblock %}</title>
     <link rel="stylesheet" href="/static/css/css.css">
     <nav class="topnav">
-        <a class="active" href="#home">Home</a>
+        <a class="active" href="/homepage">Home</a>
         <a href="#about">About</a>
         
         
@@ -63,7 +63,7 @@ console.log(locations)
     
     </div>
     
-</div>
+
 
 </body>
 </html>
