--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -71,7 +71,8 @@
     </div>
 
     <div class = "form-comtainer choice-container" >
-        <form  action = "/Movies">
+        <form  action = "/Movies" method="post">
+            <input type="hidden" class="search" name = "term" value="Movies">
             <h2>Movies</h2>
             <button> Click Here</button>
         </form> 
