--- a/templates/signup-in.html
+++ b/templates/signup-in.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>{% block title %}TITLE HERE{% endblock %}</title>
     <link rel="stylesheet" href="/static/css/css.css">
-    <nav class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#about">About</a>
-        
-        
-    </nav>
+  
     {% with messages = get_flashed_messages() %}
     {% if messages %}
         <ul class=flashes>
@@ -26,7 +21,8 @@
 
 
 </head>
-<div class = "wrapper">
+<div class = "wrapper3">
+	<img src="img/backdrop.jpg" alt="">
 <div>
         <h1 class = "title">Date Night</h1>  
 </div>
@@ -72,12 +68,12 @@
 <script src="/static/js/style.js"></script>
 </div>
 
-<footer>
+<!-- <footer>
 	<p>
 		Created with <i class="fa fa-heart"></i> by
 		<a target="_blank" href="https://florin-pop.com">Florin Pop</a>
 		- Read how I created this and how you can join the challenge
 		<a target="_blank" href="https://www.florin-pop.com/blog/2019/03/double-slider-sign-in-up-form/">here</a>.
 	</p>
-</footer>
+</footer> -->
 
