--- a/static/css/css.css
+++ b/static/css/css.css
@@ -8,7 +8,7 @@
 }
 .wrapper {
 	/* background: #f6f5f7; */
-    background: rgb(255, 231, 231);
+    background-color: #f5f5f5;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -22,13 +22,27 @@
 }
 .wrapper2 {
 	/* background: #f6f5f7; */
-    background: rgb(255, 231, 231);
+    background-color: #f5f5f5;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
 	/* height: 199vh; */
+	/* margin: -20px 0 50px; */
+}
+.wrapper3 {
+    background-image: url(/static/img/backdrop.jpg);
+	/* background: #f6f5f7; */
+    /* background-color: #fa0606; */
+    background-repeat: no-repeat;
+    background-size: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: 'Montserrat', sans-serif;
+	height: 100vh;
 	/* margin: -20px 0 50px; */
 }
 
@@ -62,8 +76,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #f3c3bb;
+	background-color: #f3c3bb;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -125,7 +139,7 @@ input {
 			0 10px 10px rgba(0,0,0,0.22); */
 	position: relative;
 	/* overflow: hidden; */
-	width: 768px;
+	width: 1000px;
 	max-width: 100%;
 	/* min-height: 480px; */
     /* overflow: auto;  */
@@ -190,9 +204,11 @@ input {
 }
 
 .overlay {
+    
 	background: #FF416C;
+    
 	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: linear-gradient(to right, #a9bd9390, #a9bd9390);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
@@ -205,11 +221,13 @@ input {
 	transition: transform 0.6s ease-in-out;
 }
 .title{
-    color: #FF416C;
-	color: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	color: linear-gradient(to right, #FF4B2B, #FF416C);
-    background-repeat: no-repeat;
-    background-size: cover;
+    font-family: cursive;
+    font-size: 95px;
+    text-align: center;
+    min-width:max-content;
+    text-shadow:5px 5px #fd8cf723 ;
+    
+    color: #93bda8 
 }
 
 .container.right-panel-active .overlay {
@@ -293,8 +311,9 @@ img{
  width: 200px
 }
 .location{
-    background: rgb(255, 231, 231);
+    background-color: #f5f5f5;
 }
+ 
 .search-button img {
     width: 20px;
     height: 20px;
@@ -324,7 +343,9 @@ img{
 }
 #city-lookup{
     display: flex;
+    
 }
+
 /* Add a black background color to the top navigation */
 .topnav {
     background: rgb(255, 231, 231);
@@ -340,7 +361,14 @@ img{
     text-decoration: none;
     font-size: 17px;
   }
-  
+  .navbar{
+    /* background-color: rgba(244, 247, 245, 0.336); */
+    background-color:#a9bd9390;
+    max-height: 50px;
+	border: 1px solid #f3c3bb;
+    /* border-bottom: solid 40px #f3c4bb93; */
+    /* border-bottom: solid 40px #a9bd9390; */
+  }
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: #ddd;
@@ -352,16 +380,35 @@ img{
     background-color: #04AA6D;
     color: white;
   }
+  .plant{
+    min-height: 50px;
+    min-width: 150px;
+    background-image: url(/static/img/tally.avif);
+    background-size: 220px;
+    background-repeat: no-repeat;
+    transform: rotate(180deg);
+    
+    /* background-size: cover; */
+    
+  }
+
+  .main-nav{
+
+    display: flex;
+    justify-content: space-between;
+    max-height: 75px;
+    
+  }
     .form-comtainer{
 
-        border: rgb(179, 147, 147) solid 2px;
+        border: rgb(217, 179, 179) solid 2px;
         border-radius: 30px;
         padding: 30px;
         margin-bottom: 30px;
     }
 
       .fa-star.checked{
-        color: rgb(237, 255, 248);
+        color: rgb(230, 181, 192);
         /* border: solid 1px black; */
       }
     .photos{
@@ -388,7 +435,7 @@ img{
     }
 .info-box{
     display: flex;
-    background-color: rgb(225, 195, 195);
+    background-color: #a9bd9390 ;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(195, 194, 194, 0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
@@ -400,7 +447,14 @@ img{
     overflow: auto;
     margin: 20px;
 }
+.info-box:hover{
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    transition: 1s ease;  
+    
 
+}
  .movies-container{
     display: flex; 
     flex-wrap: wrap;
@@ -420,4 +474,36 @@ img{
  }
  .movie-img{
     margin-top: 30px;
+ }
+ .information{
+    margin-left: 40px;
+ }
+ .place-title{
+    /* background-color: red; */
+    text-align: center;
+    min-width: 500px;
+ }
+ .phone{
+    margin-top: 40px;
+    margin-bottom: auto;
+ }
+ .nave-title{
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    margin: 20px;
+    font-family: cursive;
+    font-stretch: e;
+    text-align: center;
+    text-shadow:4px 4px #dcb4da57 ;
+    /* min-width: 1080px; */
+    color: #93bda8 
+ }
+ #dropdownMenuButton1{
+    background-color: #f3c3bb;;
+ }
+
+ .fa-user-o{
+    color: white;
  }
