--- a/templates/manage.html
+++ b/templates/manage.html
@@ -9,29 +9,25 @@
     <link rel="stylesheet" href="/static/css/css.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <div class = "main-nav">
-        <div class = "plant">
+    <!-- <nav class="topnav">
+        <a class="active" href="/homepage">Home</a>
         
-        </div>
-        <div class= "nave-title">
-        <h1 >DateNight</h1>
-        </div>
-        <div class = "plant"></div>
-    </div>
 
+        
+    </nav> -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
         <!-- <span class="navbar-brand mb-0 h1"><big>Support the locals</big> <small><sup>5000</sup></small></span> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          
           {% if 'email' in session%}
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/homepage">Home <i class="fa fa-home" aria-hidden="true"></i></a>
               </li>
-
               <!-- <li class="nav-item">
                 <a class="nav-link" href="/favorite_places">Favorites <i class="fa fa-heart" aria-hidden="true"></i></a>
               </li> -->
@@ -84,89 +80,67 @@
 
 </head>
 
-<body>
-<!-- <h1> Welcome {{name.title()}}, here are some date ideas</h1> -->
+<body class="text-center">
+    <div class = 'container'>
+    <h2>Profile</h2><br>
 
-<div class = "wrapper2" >
-    
- <div>
-    <h1> Welcome {{name.title()}}, here are some date ideas</h1>
-</div>
-{%if session["location"] == None%}
-<form action="/homepage" class="location" method = "post">
-    <div class="form-example">
-        <label for="name">Choose a location: </label>
-        <div id = "city-lookup">
-        <input type="text" name="location" id="location" placeholder="City, State" 
-        required>
-        
-        <button id = "search" type="submit"><i class="fa fa-search"></i></button>
+<div class="row">
+
+
+<div class="col">
+
+
+    <h5>Would you like to update your profile information?</h5><br>
+
+    <div id='information-form'>
+        <form action="/updateinfo" method="POST"> 
+        <div class="col-md-12">    
+            <label for="first_name">First Name:</label>
+            <input value = '{{user.fname}}' class="form-control" type="text" name="first_name" id ="first_name" required>
         </div>
-    </div>
-</form>
-{%else%}
-<h2> in {{session["location"]}}</h2>
-{% endif %}
+        <div class="col-md-12"> 
+            <label for="last_name">Last Name:</label>
+            <input value = '{{user.lname}}' class="form-control" type="text" name="last_name" id ="last_name" required>
+        </div>
+        <div class="col-md-12">
+            <label for="email">Email:</label>
+            <input value = '{{user.email}}' class="form-control" type="text" name="email" id ="email" required>
+            <button class="btn btn-primary" type="submit">Update User Info</button>
 
-<div class = choices-container id = "containre">
-    <div class = "form-comtainer choice-container" >
-        <form  action = "/picnic" method="post">
-            <input type="hidden" class="search" name = "term" value="parks">
-            <h2>Picnic</h2>
-            <button> Click Here</button>
-        </form> 
-        
-    </div>
+        </div>
 
-    <div class = "form-comtainer choice-container" >
-        <form  action = "/restaurant" method="post">
-            <input type="hidden" class="search" name = "term" value="restaurants">
-            <h2>Restaurant</h2>
-            <button> Click Here</button>
-        </form> 
-    
-    </div>
-
-    <div class = "form-comtainer choice-container" >
-        <form  action = "/Movies" method="post">
-            <input type="hidden" class="search" name = "term" value="Movies">
-            <h2>Movies</h2>
-            <button> Click Here</button>
-        </form> 
-    
-    </div>
-
-    <div class = "form-comtainer choice-container" >
-        <form  action = "/bars" method="post">
-            <input type="hidden" class="search" name = "term" value="bars" />
-            <h2>bars</h2>
-            <button> Click Here</button>
-        </form> 
-
-    
-    </div>
-
-    <div class = "form-comtainer choice-container" >
-        <form  action = "/museums" method="post">
-            <input type="hidden" class="search" name = "term" value="museums" />
-            <h2>Museums</h2>
-            <button> Click Here</button>
-        </form> 
-    
-    </div>
-
-    <div class = "form-comtainer choice-container" >
-        <form  action = "/events">
-            <h2>Events</h2>
-            <button> Click Here</button>
-        </form> 
-    
-    </div>
-
+        </form>
+  </div>      
 </div>
- 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <div class="col">
+    <h5>Would you like to update your password?</h5><br>
+
+        <div id='pass-form'>
+
+        <form action='/updatepassword' method="POST"> 
+
+
+        <div class="col-md-12">
+            <label for="password">New Password:</label>
+            <input class="form-control" type="password" name="password" id ="password" required>
+        </div>
+        <div class="col-md-12">
+            <label for="conf-password">Confirm Password:</label>
+            <input class="form-control" type="password" name="conf-password" id ="conf-password" required>
+        </div>
+        <div class="col-md-12">
+            <label for="old-password">Old Password:</label>
+            <input class="form-control" type="password" name="old-password" id ="old-password" required>
+        </div>
+        <div class="col-12">
+            <button class="btn btn-primary" type="submit">Update Password</button>
+        </div>
+        </form>
+        </div>
 </div>
 
+</div>
+</div>
 </body>
+</html>
 
