--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -31,42 +31,72 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/homepage">Home <i class="fa fa-home" aria-hidden="true"></i></a>
               </li>
-
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="/favorite_places">Favorites <i class="fa fa-heart" aria-hidden="true"></i></a>
-              </li> -->
+    
+            </ul>
+            <ul>
+                
+                    {%if session["location"] == None%}
+                    <li>
+                    <div class = "location-nav">
+                    <form action="/homepage" class="location" method = "post">
+                        <div class="form-example">
+                            <label for="name"></label>
+                            <div id = "city-lookup">
+                            <input type="text" name="location" id="location" placeholder="City, State" 
+                            required>
+                            
+                            <button id = "search" type="submit"><i class="fa fa-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                </li>
+                    {%else%}
+                    <li>
+                    <form action="/homepage" class="location" method = "post">
+                        <div class="form-example">
+                            <label for="name"></label>
+                            <div id = "city-lookup">
+                            <input type="text" name="location" id="location" placeholder='{{session["location"]}}'
+                            required>
+                            
+                            <button id = "search" type="submit"><i class="fa fa-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                
+            </li>
+                    {% endif %}
+               
+                
+            </ul>
+            <ul>
+                <li>
+                    <div class="dropdown" id = "dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                          <i class="fa fa-user-o" aria-hidden="true"></i>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                
+                          {% if 'email' in session%}          
+                          <li><a class="dropdown-item" href="/manage"><i class="fa fa-cog" aria-hidden="true"></i> Manage Account</a></li>
+                          <li><a class="dropdown-item" href="/favorites"> <i class="fa fa-heart" aria-hidden="true"></i> Favorites</a></li>
+                
+                
+                          <li><a class="dropdown-item" href="/logout">Log out</a></li>
+                
+                          {% else %}
+                
+                          <li><a class="dropdown-item" href="/login">Log in</a></li>
+                
+                          {% endif%}
+                        </ul>
+                
+                      </div>
+                </li>
             </ul>
           </div>
-          <!-- <a class="nav-link" href="/logout">Log out</a> -->
-            {% else %}
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <a class="nav-link" href="/">Create account</a>
-            </div>
-            
-            <!-- <a class="nav-link" href="/login">Log in</a> -->
           {% endif%}
-        
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="fa fa-user-o" aria-hidden="true"></i>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-end">
-
-          {% if 'email' in session%}          
-          <li><a class="dropdown-item" href="/manage"><i class="fa fa-cog" aria-hidden="true"></i> Manage Account</a></li>
-          <li><a class="dropdown-item" href="/favorites"> <i class="fa fa-heart" aria-hidden="true"></i> Favorites</a></li>
-
-
-          <li><a class="dropdown-item" href="/logout">Log out</a></li>
-
-          {% else %}
-
-          <li><a class="dropdown-item" href="/login">Log in</a></li>
-
-          {% endif%}
-        </ul>
-
-      </div>
+        </div>
 
 </div>
       </nav>
@@ -85,28 +115,26 @@
 </head>
 
 <body>
-<!-- <h1> Welcome {{name.title()}}, here are some date ideas</h1> -->
-
+    {% if session["location"]== None  %}
+    <div class = "Welcome-sign">
+<h1 class = "welcome"> Welcome {{name.title()}}, here are some date ideas </h1>
+    </div>
+    {%else%}
+    <div class = "Welcome-sign">
+        <h1 class = "welcome"> Welcome {{name.title()}}, here are some date ideas in {{session["location"].title()}} </h1>
+    </div>
+    {%endif%}
+<div class = "homepage-container">
+<div class = "homepage-writting" >
+    <div>
+        <!-- <h3> Simplify date planning </h> -->
+        <!-- <h5> by giving you diffrent acctivities to choose from with fifteen diffrent options near your city </h5> -->
+    </div>
+    
+</div>
 <div class = "wrapper2" >
     
  <div>
-    <h1> Welcome {{name.title()}}, here are some date ideas</h1>
-</div>
-{%if session["location"] == None%}
-<form action="/homepage" class="location" method = "post">
-    <div class="form-example">
-        <label for="name">Choose a location: </label>
-        <div id = "city-lookup">
-        <input type="text" name="location" id="location" placeholder="City, State" 
-        required>
-        
-        <button id = "search" type="submit"><i class="fa fa-search"></i></button>
-        </div>
-    </div>
-</form>
-{%else%}
-<h2> in {{session["location"]}}</h2>
-{% endif %}
 
 <div class = choices-container id = "containre">
     <div class = "form-comtainer choice-container" >
@@ -117,7 +145,14 @@
         </form> 
         
     </div>
-
+ <div class = "form-comtainer choice-container" >
+        <form  action = "/hiking" method="post">
+            <input type="hidden" class="search" name = "term" value="hiking" />
+            <h2>Hiking</h2>
+            <button> Click Here</button>
+        </form> 
+    
+    </div>
     <div class = "form-comtainer choice-container" >
         <form  action = "/restaurant" method="post">
             <input type="hidden" class="search" name = "term" value="restaurants">
@@ -139,7 +174,7 @@
     <div class = "form-comtainer choice-container" >
         <form  action = "/bars" method="post">
             <input type="hidden" class="search" name = "term" value="bars" />
-            <h2>bars</h2>
+            <h2>Bars</h2>
             <button> Click Here</button>
         </form> 
 
@@ -150,6 +185,14 @@
         <form  action = "/museums" method="post">
             <input type="hidden" class="search" name = "term" value="museums" />
             <h2>Museums</h2>
+            <button> Click Here</button>
+        </form> 
+    
+    </div>
+    <div class = "form-comtainer choice-container" >
+        <form  action = "/bowling" method="post">
+            <input type="hidden" class="search" name = "term" value="bowling" />
+            <h2>Bowling</h2>
             <button> Click Here</button>
         </form> 
     
@@ -167,6 +210,6 @@
  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </div>
-
+</div>
 </body>
 
