--- a/static/css/css.css
+++ b/static/css/css.css
@@ -38,12 +38,15 @@
     /* background-color: #fa0606; */
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
+    /* width: 175vh; */
     
 	/* margin: -20px 0 50px; */
 }
@@ -143,10 +146,10 @@ input {
 			0 10px 10px rgba(0,0,0,0.22); */
 	position: relative;
 	/* overflow: hidden; */
-	width: 820px;
+	width: 845px;
 	max-width: 100%;
     overflow: auto;
-    max-height: 590px;
+    max-height: 600px;
 	/* min-height: 480px; */
     /* overflow: auto;  */
 }
@@ -605,3 +608,24 @@ img{
     display: flex;
     justify-content: space-between;
  }
+ .container4{
+    /* display: flex; */
+    background-color: #a9bd9390 ;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px rgba(195, 194, 194, 0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+	position: center;
+	/* overflow: hidden; */
+	/* width: 800px; */
+	max-width: 1050px;
+	min-height: 600px;
+    /* overflow: auto; */
+    margin: 20px;
+    margin-left: 160px;
+    padding-left: 30px;
+    padding-right: 30px;
+ }
+ .updateinfo{
+    background-color: rgba(241, 241, 241, 0.344);
+ }
+
